after  correctly aligned the content

--- a/style.css
+++ b/style.css
@@ -97,12 +97,24 @@ img{
     margin-top: 0 auto;
     padding: 0 30px 30px;
 }
+.social {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+}
 .social img {
     width: 35px;
     height: 35px;
 }
 .social a{
     text-decoration: none;
+    margin-right: 20px;
+}
+.divider {
+    width: 95%;
+    height: 1px;
+    background-color: #ccc;
+    margin: 40px auto;
 }
 /* Box */
 .box{
